raft: add set api
